# RustyCANdapter

./: Cargo.toml  README.md
src/: can_frame.rs  main.rs  serial.rs  ui_handler.rs
ui/: appwindow.slint  side_bar.slint
ui/elements/: can_frame.slint
ui/pages/: bus_info_page.slint  live_view_page.slint  logging_page.slint  page.slint  pages.slint  scheduled_frames_page.slint  settings_page.slint
