[package]
name = "RustyCANdapter"
version = "0.1.0"
authors = ["Simon Alexander <bcspace8@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3"
tokio-serial = "5.4.4"

[build-dependencies]
slint-build = "1.3"
