[package]
name = "RustyCANdapter"
version = "0.1.0"
authors = ["Simon Alexander <bcspace8@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3"
tokio-serial = "5.4.4"
rand = "0.8.5"
strum = "0.26.1"
strum_macros = { version = "0.26.1"}
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

[build-dependencies]
slint-build = "1.3"
